<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SkyDash</string>
    <string name="play">Play</string>
    <string name="shop">Shop</string>
    <string name="settings">Settings</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score</string>
    <string name="coins">Coins</string>
    <string name="buy">Buy</string>
    <string name="back">Back</string>
    <string name="music">Music</string>
    <string name="sfx">SFX</string>
    <string name="high_score">High Score</string>
    <string name="upgrade_speed">Speed Boost</string>
    <string name="upgrade_magnet">Coin Magnet</string>
    <string name="upgrade_shield">Shield</string>
</resources>
