<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background">

    <Switch
        android:id="@+id/swMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:textColor="@color/white"/>

    <Switch
        android:id="@+id/swSfx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sfx"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="24dp"/>

</LinearLayout>
